[main] fix: small fixes
